[tool.poetry]
name = "brewblox-auth"
version = "1.0.0"
description = "Brewblox authentication middleware"
authors = ["BrewPi <development@brewpi.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4"
cryptography = "41.0.3"
pyjwt = "^2.7.0"
flask = "^2.3.2"
gunicorn = "^21.2.0"
passlib = "^1.7.4"

[tool.poetry.group.dev.dependencies]
pytest-cov = "*"
pytest-mock = "*"
flake8 = "*"
autopep8 = "*"
flake8-quotes = "*"
pytest = "*"
invoke = "^2.2.0"

[build-system]
requires = ["poetry>=0.12", "cryptography==41.0.3"]
build-backend = "poetry.masonry.api"
