[tool.poetry]
name = "brewblox-auth"
version = "1.0.0"
description = "Brewblox authentication middleware"
authors = ["BrewPi <development@brewpi.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
cryptography = "41.0.3"
pyjwt = "^2.7.0"
passlib = "^1.7.4"
fastapi = "^0.103.1"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
pydantic-settings = "^2.0.3"

[tool.poetry.group.dev.dependencies]
pytest-cov = "*"
pytest-mock = "*"
flake8 = "*"
autopep8 = "*"
flake8-quotes = "*"
pytest = "*"
invoke = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
